containers/jaeger/jaeger.svc.yaml
# ----------------------------------------
# kubectl get svc jaeger-deploy
# kubectl describe svc jaeger-deploy
# kubectl logs --selector app=jaeger
# ----------------------------------------

apiVersion: v1
kind: Service
metadata:
  name: jaeger-service
spec:
  ports:
    - name: grpc-collector
      port: 14268
      protocol: TCP
      targetPort: 14268
    - name: browser-ui
      port: 16686
      protocol: TCP
      targetPort: 16686
  selector:
    app: jaeger
  type: ClusterIP
